Fix display bug on mobile

--- a/frontend/src/app/nav/side-nav-page/side-nav-page.component.css
+++ b/frontend/src/app/nav/side-nav-page/side-nav-page.component.css
@@ -1,12 +1,3 @@
-:host {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  overflow: scroll;
-}
-
 #hamburger-icon {
   cursor: pointer;
   display: flex;
